--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //countryPicker
     implementation "com.hbb20:ccp:2.2.2"
+    implementation "com.hbb20:android-country-picker:0.0.7"
 
 }
