General Fragment new UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WAAPH">
         <activity
+            android:name=".CreateGeneralDataActivity"
+            android:exported="false" />
+        <activity
             android:name=".CustomerDataFormActivity"
             android:exported="false" />
         <activity
