ODF Ui Complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WAAPH">
         <activity
-            android:name=".fragments.CustomerDataFormFragments.CreateItemSelectionActivity"
+            android:name=".ItemSelectedDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateItemSelectionActivity"
             android:exported="false" />
         <activity
             android:name=".OrderDataFormActivity"
