Api Calling of login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,10 @@ dependencies {
     //glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     //retrofit
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     //circleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //countryPicker
@@ -85,4 +85,6 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.9.0'
+    // Translucent Background Library
+    implementation 'com.github.mmin18:realtimeblurview:1.2.1'
 }
